--- a/app/views/dashboard/edit_all.html.erb
+++ b/app/views/dashboard/edit_all.html.erb
@@ -3,7 +3,7 @@
 
   <h1 class="text-2xl text-center mb-4 text-teal-700">Edit Products</h1>
 
-  <%= form_with model: Product.new, url: create_product_dashboard_index_path, data: { turbo_frame: "products_frame" }, html: { class: "flex flex-col items-center space-y-4" } do |form| %>
+  <%= form_with model: Product.new, url: products_path, data: { turbo_frame: "products_frame" }, html: { class: "flex flex-col items-center space-y-4" } do |form| %>
     <div class="flex flex-col">
       <%= form.label :name, class: "font-bold mb-2 text-teal-700" %>
       <%= form.text_field :name, class: "border-2 border-gray-300 p-2" %>
