--- a/app/views/dashboard/weekly_history.html.erb
+++ b/app/views/dashboard/weekly_history.html.erb
@@ -1,4 +1,5 @@
 <turbo-frame id="weekly-history">
+  <%= link_to 'Back to Dashboard', dashboard_index_path, class: 'bg-teal-500 text-white p-2 mb-4 inline-block', data: { turbo_frame: '_top' } %>
   <h1 class="text-2xl font-bold mb-4">Weekly History</h1>
 
   <% @weekly_history.each do |data| %>
