--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,19 +1,23 @@
-<div class="container mx-auto px-4">
-  <h1 class="text-4xl font-bold mb-4">Edit Product</h1>
+<div class="max-w-md mx-auto bg-white shadow-md overflow-hidden md:max-w-2xl m-4">
+  <div class="md:flex">
+    <div class="p-8">
+      <div class="uppercase tracking-wide text-sm text-teal-500 font-semibold">Edit Product</div>
 
-  <turbo-frame id="products_frame">
-    <%= form_with model: @product, url: product_path(@product), method: :patch, class: 'bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4' do |form| %>
-      <div class="mb-4">
-        <%= form.label :name, class: 'block text-gray-700 text-sm font-bold mb-2' %>
-        <%= form.text_field :name, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline' %>
-      </div>
+      <turbo-frame id="products_frame">
+        <%= form_with model: @product, url: product_path(@product), method: :patch, class: 'bg-white shadow-md px-8 pt-6 pb-8 mb-4 mt-10' do |form| %>
+          <div class="mb-4">
+            <%= form.label :name, class: 'block text-gray-700 text-sm font-bold mb-2' %>
+            <%= form.text_field :name, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline' %>
+          </div>
 
-      <div class="mb-6">
-        <%= form.label :cogs, class: 'block text-gray-700 text-sm font-bold mb-2' %>
-        <%= form.number_field :cogs, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline' %>
-      </div>
+          <div class="mb-6">
+            <%= form.label :cogs, class: 'block text-gray-700 text-sm font-bold mb-2' %>
+            <%= form.number_field :cogs, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline' %>
+          </div>
 
-      <%= form.submit "Update product", class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline' %>
-    <% end %>
-  </turbo-frame>
+          <%= form.submit "Update product", class: 'mt-4 inline-block bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4' %>
+        <% end %>
+      </turbo-frame>
+    </div>
+  </div>
 </div>
