--- a/app/views/dashboard/weekly_history.html.erb
+++ b/app/views/dashboard/weekly_history.html.erb
@@ -3,11 +3,11 @@
   <h1 class="text-2xl font-bold mb-4">Weekly History</h1>
 
   <% @weekly_history.each do |data| %>
-    <div class="bg-white shadow rounded-lg p-6 mb-4">
-      <h2 class="text-xl font-semibold mb-2">Week <%= data[:week_of_year] %> (<%= data[:start_date].strftime('%B %d, %Y') %> - <%= data[:end_date].strftime('%B %d, %Y') %>):</h2>
-      <p class="mb-1">Total Revenue: <%= number_to_currency(data[:total_revenue]) %></p>
-      <p class="mb-1">COGS: <%= number_to_currency(data[:cogs]) %></p>
-      <p>Profit: <%= number_to_currency(data[:profit]) %></p>
+  <div class="bg-white shadow rounded-lg p-6 mb-4">
+    <h2 class="text-xl font-semibold mb-2">Week <%= data[:week_of_year] %> (<%= data[:start_date] ? data[:start_date].strftime('%B %d, %Y') : 'N/A' %> - <%= data[:end_date] ? data[:end_date].strftime('%B %d, %Y') : 'N/A' %>):</h2>
+    <p class="mb-1">Total Revenue: <%= number_to_currency(data[:total_revenue]) %></p>
+    <p class="mb-1">COGS: <%= number_to_currency(data[:cogs]) %></p>
+    <p>Profit: <%= number_to_currency(data[:profit]) %></p>
 
       <div class="bg-gray-200 p-4 mt-4 rounded-lg">
         <h3 class="text-lg font-semibold mb-2">Specific Revenue:</h3>
