--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,10 +4,10 @@
   <div class="bg-gray-800 shadow rounded-lg p-6 mb-8">
     <h1 class="text-4xl font-bold mb-8 text-white">New Sale</h1>
     <%= form_with model: Sale.new, url: sales_path, class: 'space-y-8', data: { turbo_frame: "sales_frame" } do |form| %>
-      <div class="grid grid-cols-3 gap-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
         <% @products.sort_by(&:name).each do |product| %>
-          <div class="product-card border border-gray-600 rounded-lg p-4 shadow text-white">
-            <h2 class="text-xl font-bold mb-2"><%= product.name %></h2>
+          <div class="product-card border border-gray-600 rounded-lg p-4 sm:p-6 shadow text-white">
+            <h2 class="text-lg sm:text-xl font-bold mb-2"><%= product.name %></h2>
             <%= form.label "quantity[#{product.id}]", 'Quantity', class: 'block text-sm font-medium text-gray-300' %>
             <%= form.number_field "quantity[#{product.id}]", min: 0, value: 0, class: 'mt-1 block w-full py-2 px-3 border border-gray-600 bg-gray-700 rounded-lg shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm' %>
           </div>
