--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -32,6 +32,7 @@
       <%= form.submit "Record Sale", class: 'mt-8 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-lg text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500' %>
     <% end %>
   </div>
+  <%= link_to 'Custom Periods', custom_periods_path, class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium max-w-md rounded-lg text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500' %>
 </div>
 
 <div class="container mx-auto px-4 py-8">
