--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,4 @@
-<div class="max-w-md mx-auto bg-gray-800  rounded-lg shadow-md overflow-hidden md:max-w-2xl m-4 text-white">
+<div class="bg-gray-800 rounded-lg shadow-md overflow-hidden m-4 text-white">
   <div class="md:flex">
     <div class="p-8">
       <div class="uppercase tracking-wide text-sm text-blue-500 font-semibold">Product</div>
