--- a/app/views/dashboard/edit_all.html.erb
+++ b/app/views/dashboard/edit_all.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4">
+<div class="max-w-5xl mx-auto px-4">
   <%= link_to 'Back to Dashboard', dashboard_index_path, class: 'bg-teal-500 text-white p-2 mb-4 inline-block' %>
 
   <h1 class="text-2xl text-center mb-4 text-teal-700">Edit Products</h1>
