--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,23 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-4 px-5 flex flex-col">
-      <%= yield %>
+    <nav class="bg-gray-800 w-full">
+      <div class="flex items-center justify-between h-16 px-4">
+        <div class="flex items-center">
+          <a href="/" class="text-white text-xl font-bold">ProfitCalc</a>
+        </div>
+        <div class="flex space-x-4">
+          <%= link_to 'Create New Sale', new_sale_path, class: 'text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium', data: { turbo_frame: 'content_frame', turbo_action: 'replace' } %>
+          <%= link_to 'Products', edit_all_products_path, class: 'text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium', data: { turbo_frame: 'content_frame', turbo_action: 'replace' } %>
+          <%= link_to 'Sales Data', sales_data_dashboard_index_path, class: 'text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium', data: { turbo_frame: 'content_frame', turbo_action: 'replace' } %>
+        </div>
+      </div>
+    </nav>
+
+    <main class="mt-8">
+      <div class="max-w-7xl mx-auto px-4">
+        <%= yield %>
+      </div>
     </main>
   </body>
 </html>
