--- a/app/views/sale_types/edit.html.erb
+++ b/app/views/sale_types/edit.html.erb
@@ -1,7 +1,9 @@
-<div class="bg-white shadow-lg rounded-lg p-6 mb-8">
-  <h1 class="text-3xl font-semibold mb-8 text-gray-800">Edit Sale Type</h1>
-  
-  <%= render 'form', sale_type: @sale_type %>
-  
-  <%= link_to 'Back to Sale Types', sale_types_path, class: 'mt-4 inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500' %>
-</div>
+<%= turbo_frame_tag "content_frame" do %>
+  <div class="bg-white shadow-lg rounded-lg p-6 mb-8">
+    <h1 class="text-3xl font-semibold mb-8 text-gray-800">Edit Sale Type</h1>
+    
+    <%= render "edit_form", sale_type: @sale_type %>
+    
+    <%= link_to 'Back to Sale Types', sale_types_path, class: 'mt-4 inline-block text-blue-600 hover:text-blue-800', data: { turbo_frame: "content_frame" } %>
+  </div>
+<% end %>
