--- a/app/views/sales/_new_sale.html.erb
+++ b/app/views/sales/_new_sale.html.erb
@@ -5,8 +5,8 @@
         <% @products.sort_by(&:name).each do |product| %>
           <div class="product-card bg-gray-50 rounded-lg p-4 shadow-sm">
             <h2 class="text-lg font-medium text-gray-700 mb-2"><%= product.name %></h2>
-            <%= form.label "quantity[#{product.id}]", 'Quantity', class: 'block text-sm font-medium text-gray-600' %>
-            <%= form.number_field "quantity[#{product.id}]", min: 0, value: 0, class: 'mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md text-sm shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500' %>
+            <%= form.label "quantity[#{product.id}]", 'Quantity', for: "quantity_#{product.id}", class: 'block text-sm font-medium text-gray-600' %>
+            <%= form.number_field "quantity[#{product.id}]", id: "quantity_#{product.id}", min: 0, value: 0, class: 'mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md text-sm shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500' %>
           </div>
         <% end %>
       </div>
@@ -17,13 +17,10 @@
       </div>
 
       <div>
-      <%= form.label :sale_type_id, 'Sale Type', class: 'block text-sm font-medium text-gray-700' %>
-      <%= form.select :sale_type_id, 
-                      @sale_types.map { |st| [st.name, st.id] } + [["New Sale Type", :new_sale_type]], 
-                      { prompt: "Select a Sale Type" }, 
-                      class: 'mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md text-sm shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500',
-                      data: { action: "change->sale#handleSaleTypeChange" } %>
-    </div>
+        <%= form.label :sale_type_id, 'Sale Type', class: 'block text-sm font-medium text-gray-700 mb-2' %>
+        <%= render partial: 'sale_types/sale_type_cards' %>
+        <%= form.hidden_field :sale_type_id, data: { sale_target: "saleTypeInput" } %>
+      </div>
 
       <div>
         <%= form.label :total_received, class: 'block text-sm font-medium text-gray-700' %>
